2011-09-05  Peter Rosin  <peda@lysator.liu.se>

	* tests/amhello-binpkg.test: Add missing $EXEEXT usage.

2011-09-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	fix: list test 'vala-vpath.test' in XFAIL_TESTS
	* tests/Makefile.am (XFAIL_TESTS): Update.

2011-09-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: simplify wrapper for aclocal
	* tests/aclocal.in: Remove use of $ACLOCAL_TESTSUITE_FLAGS and
	extra `-I' flags; they are not really required, since the file
	`m4/amversion.m4' is generated in the srcdir anyway.
	* tests/acloca10.test: Remove use of $ACLOCAL_TESTSUITE_FLAGS.
	* tests/acloca18.test: Likewise.
	* tests/defs.in: Don't nullify $ACLOCAL_TESTSUITE_FLAGS, and do
	not export it.

2011-09-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	automake: fix regression due to de-ansification support removal
	The last change `v1.11-947-g136b489' removed code that automake
	was using to decide whether binary objects were built by the
	generated Makefile.in, so that it could avoid to emit unneeded
	code when this was not the case.  Re-introduce such code in a
	less-obfuscated form, and add a test to ensure we don't regress
	again.
	* automake.in ($must_handle_compiled_objects): New global
	variable, telling whether the generated Makefile has to build
	compiled objects.
	(initialize_per_input): Reset it.
	(handle_programs, handle_libraries, handle_ltlibraries): Set
	it to a true value when required.
	(handle_compile): Don't generate any code if the variable
	`$must_handle_compiled_objects' is not set to a true value.
	* tests/no-extra-makefile-code.test: New test.
	* tests/Makefile.am (TESTS): Add it.

2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	automake: cleanups after de-ansification support removal (2)
	* automake.in ($get_object_extension_was_run): Remove, it's not
	really needed anymore.
	(&get_object_extension): Remove, it's a no-op now.
	All callers adjusted.
