@@ -50,6 +50,10 @@ done
 
 for sig in 1 2 13 15; do
 
+  if $SHELL -c "kill -$sig \$\$"; then
+    echo "$me: signal $sig is blocked, skipping part of the test"
+    continue
+  fi
   echo "* Try: kill -$sig \$\$"
   if test $sig -eq 2; then
     # Some Korn shells might otherwise get a spurious SIGINT
