@@ -1,3 +1,14 @@
+2011-09-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix spurious failures due to ignored signals
+	* tests/defs (is_blocked_signal): New function.
+	* tests/parallel-tests-interrupt.test: Do not try to use/trap
+	signals that are ignored by the parent shell: they will be
+	ignored by all the child processes too.
+	* tests/self-check-exit.test: Likewise.
+	* tests/self-check-cleanup.test: Likewise, and do few minor
+	improvements and extensions since we are at it.
+
 2011-09-05  Peter Rosin  <peda@lysator.liu.se>
 
 	* tests/amhello-binpkg.test: Add missing $EXEEXT usage.
